deploy/yamls-parameterized/kustomize/base/dotnet5angular-deployment.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
    creationTimestamp: null
    labels:
        move2kube.konveyor.io/service: dotnet5angular
    name: dotnet5angular
spec:
    replicas: 2
    selector:
        matchLabels:
            move2kube.konveyor.io/service: dotnet5angular
    strategy: {}
    template:
        metadata:
            creationTimestamp: null
            labels:
                move2kube.konveyor.io/service: dotnet5angular
            name: dotnet5angular
        spec:
            containers:
                - image: quay.com/parodos/dotnet5angular:latest
                  imagePullPolicy: Always
                  name: dotnet5angular
                  ports:
                    - containerPort: 5001
                    - containerPort: 5000
                  resources: {}
            restartPolicy: Always
            securityContext: {}
status: {}

...
