deploy/yamls-parameterized/kustomize/base/workflowid--b389c1c8-b1ef-44fd-86a0-bb4788ea5dc0-ingress.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    creationTimestamp: null
    labels:
        move2kube.konveyor.io/service: workflowid--b389c1c8-b1ef-44fd-86a0-bb4788ea5dc0
    name: workflowid--b389c1c8-b1ef-44fd-86a0-bb4788ea5dc0
spec:
    rules:
        - host: localhost
          http:
            paths:
                - backend:
                    service:
                        name: dotnet5webapp
                        port:
                            name: port-5001
                  path: /dotnet5webapp
                  pathType: Prefix
                - backend:
                    service:
                        name: dotnet5webapp
                        port:
                            name: port-5000
                  path: /dotnet5webapp
                  pathType: Prefix
                - backend:
                    service:
                        name: dotnet5react-redux
                        port:
                            name: port-5001
                  path: /dotnet5react-redux
                  pathType: Prefix
                - backend:
                    service:
                        name: dotnet5react-redux
                        port:
                            name: port-5000
                  path: /dotnet5react-redux
                  pathType: Prefix
                - backend:
                    service:
                        name: dotnet5react
                        port:
                            name: port-5001
                  path: /dotnet5react
                  pathType: Prefix
                - backend:
                    service:
                        name: dotnet5react
                        port:
                            name: port-5000
                  path: /dotnet5react
                  pathType: Prefix
                - backend:
                    service:
                        name: dotnet5angular
                        port:
                            name: port-5001
                  path: /dotnet5angular
                  pathType: Prefix
                - backend:
                    service:
                        name: dotnet5angular
                        port:
                            name: port-5000
                  path: /dotnet5angular
                  pathType: Prefix
status:
    loadBalancer: {}

...
